Do rendering through React

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Minesweeper</title>
     <link href="css/main.css" rel="stylesheet">
+    <script src="js/react-0.13.3.js"></script>
 </head>
 <body>
 <h2>Minesweeper</h2>
-<table id="mineField"></table>
+<div id="firebolt"></div>
 </body>
 <script type="text/javascript" src="js/generator.js"></script>
-<script type="text/javascript" src="js/minefield.js"></script>
+<script type="text/javascript" src="js/MineField.js"></script>
 </html>
