First working reflux flow

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Minesweeper</title>
     <link href="css/main.css" rel="stylesheet">
-    <script src="js/react-0.13.3.js"></script>
+    <script src="js/react-with-addons.min.js"></script>
+    <script src="js/reflux.min.js"></script>
 </head>
 <body>
 <h2>Minesweeper</h2>
 <div id="firebolt"></div>
 </body>
-<script type="text/javascript" src="js/generator.js"></script>
+<script type="text/javascript" src="js/actions.js"></script>
+<script type="text/javascript" src="js/stores/MineFieldStore.js"></script>
 <script type="text/javascript" src="js/MineField.js"></script>
 </html>
